Switch to standardized 'dynamic_inventory_group' var name

--- a/c2r_analysis.yml
+++ b/c2r_analysis.yml
@@ -1,6 +1,6 @@
 ---
 - name: Convert2rhel pre-conversion analysis
-  hosts: "{{ dynamic_lifecycle_environment | default(omit) }}"
+  hosts: "{{ dynamic_inventory_group | default(omit) }}"
   strategy: ansible.builtin.free
   gather_facts: true
   become: true
@@ -12,7 +12,7 @@
     rhsm_password: ""
     rhsm_org: "{{ org_id }}"
     rhsm_activation_key: "{{ rhel_lifecycle_environment }}"
-    rhsm_activation_key_pre_convert: "{{ dynamic_lifecycle_environment }}"
+    rhsm_activation_key_pre_convert: "{{ dynamic_inventory_group }}"
   tasks:
     - name: Verify operating system
       ansible.builtin.assert:
