--- a/server_unregister.yml
+++ b/server_unregister.yml
@@ -18,6 +18,7 @@
     - name: Command - yum clean all
       ansible.builtin.command: >-
         yum clean all
+      ignore_errors: true
 
     - name: Delete /var/cache/yum/*
       ansible.builtin.command: >-
