Uninstall katello-ca-consumer and remove instance from Satellite post analysis

--- a/c2r_analysis_oracle.yml
+++ b/c2r_analysis_oracle.yml
@@ -23,4 +23,26 @@
 - name: Generate pre-conversion analysis report
   ansible.builtin.import_role:
     name: infra.convert2rhel.analysis
+
+- name: Uninstall katello-ca-consumer package
+  ansible.builtin.yum:
+    name: "katello-ca-consumer*"
+    state: absent
+
+- name: Include randomized delay before removing content host from Satellite
+  ansible.builtin.command: |
+    python3 -c 'import time;import random;zzzzz=random.uniform(10.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+  delegate_to: localhost
+  connection: local
+
+- name: Remove host from Satellite satellite.example.com"
+  redhat.satellite.host:
+    server_url: "https://satellite.example.com"
+    name: "{{ inventory_hostname }}"
+    organization: "{{ organization }}"
+    state: absent
+  delegate_to: localhost
+  vars:
+    organization: "Default Organization"
+    validate_certs: false
 ...
