--- a/config_as_code/satellite/ol7_c2r/activation_keys.yml
+++ b/config_as_code/satellite/ol7_c2r/activation_keys.yml
@@ -10,4 +10,14 @@ satellite_activation_keys:
   - name: "RHEL7_Prod"
     lifecycle_environment: "RHEL7_Prod"
     content_view: "RHEL7"
+  # Oracle Linux 7
+  - name: "OL7_Dev"
+    lifecycle_environment: "OL7_Dev"
+    content_view: "OL7"
+  - name: "OL7_QA"
+    lifecycle_environment: "OL7_QA"
+    content_view: "OL7"
+  - name: "OL7_Prod"
+    lifecycle_environment: "OL7_Prod"
+    content_view: "OL7"
 ...
