--- a/config_as_code/satellite/ol7_c2r/lifecycle_environments.yml
+++ b/config_as_code/satellite/ol7_c2r/lifecycle_environments.yml
@@ -7,4 +7,11 @@ satellite_lifecycle_environments:
     prior: "RHEL7_Dev"
   - name: "RHEL7_Prod"
     prior: "RHEL7_QA"
+  # Oracle Linux 7
+  - name: "OL7_Dev"
+    prior: "Library"
+  - name: "OL7_QA"
+    prior: "OL7_Dev"
+  - name: "OL7_Prod"
+    prior: "OL7_QA"
 ...
