--- a/c2r_research.yml
+++ b/c2r_research.yml
@@ -106,6 +106,12 @@
         path: "/etc/yum.repos.d/redhat.repo"
         state: absent
 
+    - name: Include randomized delay before removing content host from Satellite
+      ansible.builtin.command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(10.0,30.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
+
     - name: Register to Satellite various activation key
       community.general.redhat_subscription:
         state: present
