--- a/c2r_convert.yml
+++ b/c2r_convert.yml
@@ -13,16 +13,16 @@
     rhsm_org: "{{ org_id }}"
     rhsm_activation_key: "{{ rhel_lifecycle_environment }}"
 
-# Adding OracleLinux repo check for forward looking functionality
+# Adding repo check for forward looking functionality
   pre_tasks:
-    - name: Register output of 'yum repolist' with specifics for OracleLinux
+    - name: Register output of 'yum repolist'
       ansible.builtin.shell: |
         set -o pipefail
         yum repolist all --verbose | grep Repo-baseurl | grep -v convert2rhel
       args:
         executable: /bin/bash
-      register: yum_repolist_for_oracle
-      changed_when: yum_repolist_for_oracle.rc != 0
+      register: yum_repolist_for_baseurl
+      changed_when: yum_repolist_for_baseurl.rc != 0
 
     # Determine if node is an EC2 Marketplace instance utilizing Oracle repo infrastructure
     - name: Set fact for Oracle repo utilization
@@ -31,7 +31,7 @@
       when:
         - ansible_system_vendor == "Amazon EC2" or ansible_system_vendor == "Xen"
         - ansible_product_uuid|regex_search('^ec2') or ansible_product_uuid|regex_search('^EC2')
-        - "'yum.oracle.com' in yum_repolist_for_oracle.stdout"
+        - "'yum.oracle.com' in yum_repolist_for_baseurl.stdout"
         - ansible_distribution_major_version|int == 7
 
   tasks:
