--- a/c2r_research.yml
+++ b/c2r_research.yml
@@ -1,7 +1,7 @@
 ---
 - name: Convert2rhel research Satellite certs
   hosts: RHEL7_Dev
-  strategy: ansible.builtin.serial
+  strategy: ansible.builtin.linear
   gather_facts: true
   become: false
   tasks:
