--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -46,9 +46,9 @@
 
 - name: Remove OracleLinux7 remnant packages
   ansible.builtin.yum:
-    name: "{{ item }}"
+    name: "{{ item.split(':')[1] }}"
     state: absent
-  loop: "{{ oracle_vendor_packages.stdout_lines.split(':')[1] }}"
+  loop: "{{ oracle_vendor_packages.stdout_lines }}"
 
 - name: Command - yum clean all
   ansible.builtin.command: >-
