--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -43,8 +43,7 @@
     rpm_query_command: rpm -qa --queryformat '%{vendor}:%{name}\n' | grep 'Oracle America'
 
 - name: Query for packages that are remnants from OracleLinux7 conversions
-  ansible.builtin.command: |
-    {{ rpm_query_command.replace('\\n', '\n') }}
+  ansible.builtin.command: "{{ rpm_query_command.replace('\\n', '\n') }}"
   register: oracle_vendor_packages
   changed_when: false
 
