--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -42,6 +42,8 @@
   ansible.builtin.script: rpm-query-oracle-vendor.sh
   register: oracle_vendor_packages
   changed_when: false
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
 
 - name: Debug oracle_vendor_packages
   ansible.builtin.debug:
