--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -44,7 +44,7 @@
   changed_when: false
   environment:
     LANG: en_US.UTF-8
-    LC_ALL: en_US.UTF-8
+    LC_CTYPE: en_US.UTF-8
     TERM: linux
 
 - name: Debug oracle_vendor_packages
