Switch out debug for yum task.

--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -43,18 +43,19 @@
   register: oracle_vendor_packages
   changed_when: false
 
-- name: Debug oracle_vendor_packages
-  ansible.builtin.debug:
-    msg:
-      - "OracleLinux7 package  ==> {{ item.split(':')[1] }}"
-  when: '"Oracle" in item'
-  with_items: "{{ oracle_vendor_packages.stdout_lines }}"
+# - name: Debug oracle_vendor_packages
+#   ansible.builtin.debug:
+#     msg:
+#       - "OracleLinux7 package  ==> {{ item.split(':')[1] }}"
+#   when: '"Oracle" in item'
+#   with_items: "{{ oracle_vendor_packages.stdout_lines }}"
 
-# - name: Remove OracleLinux7 remnant packages
-#   ansible.builtin.yum:
-#     name: "{{ item.split(':')[1] }}"
-#     state: absent
-#   loop: "{{ oracle_vendor_packages.stdout_lines }}"
+- name: Remove OracleLinux7 remnant packages
+  ansible.builtin.yum:
+    name: "{{ item.split(':')[1] }}"
+    state: absent
+  when: '"Oracle" in item'
+  loop: "{{ oracle_vendor_packages.stdout_lines }}"
 
 - name: Command - yum clean all
   ansible.builtin.command: >-
