--- a/leapp_remediate.yml
+++ b/leapp_remediate.yml
@@ -7,6 +7,10 @@
   force_handlers: true
   vars:
     leapp_include_delay: false
+  environment:
+    LANG: en_US.UTF-8
+    LC_ALL: en_US.UTF-8
+    TERM: linux
   tasks:
     - name: Include randomized delay before beginning remediation
       ansible.builtin.command: |
