--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -38,12 +38,16 @@
   notify:
     - Restart sshd
 
+- name: Copy rpm-query-oracle-vendor.sh to remote node 
+  ansible.builtin.copy:
+    src: "rpm-query-oracle-vendor.sh"
+    dest: "/tmp/rpm-query-oracle-vendor.sh"
+    mode: '0744'
+
 - name: Query for packages that are remnants from OracleLinux7 conversions
-  ansible.builtin.script: rpm-query-oracle-vendor.sh
+  ansible.builtin.command: /tmp/rpm-query-oracle-vendor.sh
   register: oracle_vendor_packages
   changed_when: false
-  vars:
-    ansible_python_interpreter: /usr/bin/python3
 
 # - name: Debug oracle_vendor_packages
 #   ansible.builtin.debug:
