Add changed_when: false for  yum clean all

--- a/remediate_rhel7.yml
+++ b/remediate_rhel7.yml
@@ -68,6 +68,7 @@
 - name: Command - yum clean all
   ansible.builtin.command: >-
     yum clean all
+  changed_when: false
 
 - name: Get list of current yum cache directories
   ansible.builtin.command: >-
